--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "keywords": [
         "andrefelipe18",
         "laravel",
-        "tallstackuifilament"
+        "tallstackui",
+        "filament"
     ],
     "homepage": "https://github.com/andrefelipe18/tallstackuifilament",
     "license": "MIT",
@@ -32,14 +33,12 @@
     },
     "autoload": {
         "psr-4": {
-            "TallStackUIFilament\\TallStackUIFilament\\": "src/",
-            "TallStackUIFilament\\TallStackUIFilament\\Database\\Factories\\": "database/factories/"
+            "TallStackUIFilament\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "TallStackUIFilament\\TallStackUIFilament\\Tests\\": "tests/",
-            "Workbench\\App\\": "workbench/app/"
+            "TallStackUIFilament\\Tests\\": "tests/"
         }
     },
     "scripts": {
@@ -60,11 +59,8 @@
     "extra": {
         "laravel": {
             "providers": [
-                "TallStackUIFilament\\TallStackUIFilament\\TallStackUIFilamentServiceProvider"
-            ],
-            "aliases": {
-                "TallStackUIFilament": "TallStackUIFilament\\TallStackUIFilament\\Facades\\TallStackUIFilament"
-            }
+                "TallStackUIFilament\\TallStackUIFilamentServiceProvider"
+            ]
         }
     },
     "minimum-stability": "dev",
