--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -1,66 +1,113 @@
 name: Bug Report
-description: Report an Issue or Bug with the Package
+description: Report an issue or bug
 title: "[Bug]: "
 labels: ["bug"]
+assignees: andrefelipe18
 body:
-    - type: markdown
-      attributes:
-          value: |
-              We're sorry to hear you have a problem. Can you help us solve it by providing the following details.
-    - type: textarea
-      id: what-happened
-      attributes:
-          label: What happened?
-          description: What did you expect to happen?
-          placeholder: I cannot currently do X thing because when I do, it breaks X thing.
-      validations:
-          required: true
-    - type: textarea
-      id: how-to-reproduce
-      attributes:
-          label: How to reproduce the bug
-          description: How did this occur, please add any config values used and provide a set of reliable steps if possible.
-          placeholder: When I do X I see Y.
-      validations:
-          required: true
-    - type: input
-      id: package-version
-      attributes:
-          label: Package Version
-          description: What version of our Package are you running? Please be as specific as possible
-          placeholder: 2.0.0
-      validations:
-          required: true
-    - type: input
-      id: php-version
-      attributes:
-          label: PHP Version
-          description: What version of PHP are you running? Please be as specific as possible
-          placeholder: 8.2.0
-      validations:
-          required: true
-    - type: input
-      id: laravel-version
-      attributes:
-        label: Laravel Version
-        description: What version of Laravel are you running? Please be as specific as possible
-        placeholder: 9.0.0
-      validations:
-        required: true
-    - type: dropdown
-      id: operating-systems
-      attributes:
-        label: Which operating systems does this happen with?
-        description: You may select more than one.
-        multiple: true
-        options:
+  - type: markdown
+    attributes:
+      value: |
+        We're sorry to hear you have a problem. Can you help us solve it by providing the following details.
+  - type: textarea
+    id: what-happened
+    attributes:
+      label: What Happened
+      description: What did you expect to happen?
+      placeholder: When I use Pin I get an error
+    validations:
+      required: true
+  - type: dropdown
+    id: component
+    attributes:
+      label: Component
+      description: If the issue occurs with a specific component, select it here.
+      multiple: false
+      options:
+        - Checkbox
+        - Color
+        - Date
+        - Input
+        - Number
+        - Password
+        - Pin
+        - Range
+        - Select
+        - Tag
+        - Textarea
+        - Time
+        - Toggle
+    validations:
+      required: true
+  - type: textarea
+    id: how-to-reproduce
+    attributes:
+      label: How to Reproduce
+      description: How did this occur, please add any config values used and provide a set of reliable steps if possible.
+      placeholder: Install a fresh Laravel app, install TallStackUI, add a <x-button /> to a Livewire component, visit the page
+    validations:
+      required: true
+  - type: input
+    id: public-repository
+    attributes:
+      label: Public Repository
+      description: If possible, please provide a public repository that reproduces the issue.
+      placeholder: https://github.com/your-username/repository
+  - type: input
+    id: laravel-version
+    attributes:
+      label: Laravel Version
+      description: What version of Laravel are you running? Please be as specific as possible
+      placeholder: For example, 11.30.0
+    validations:
+      required: true
+  - type: input
+    id: livewire-version
+    attributes:
+      label: Livewire Version
+      description: What version of Livewire are you running? Please be as specific as possible
+      placeholder: For example, 3.0.5
+    validations:
+      required: true
+  - type: input
+    id: tsui-version
+    attributes:
+      label: TallStackUI Version
+      description: What version of our Package are you running? Please be as specific as possible
+      placeholder: For example, 2.1.2
+    validations:
+      required: true
+  - type: input
+    id: php-version
+    attributes:
+      label: PHP Version
+      description: What version of PHP are you running? Please be as specific as possible
+      placeholder: For example, 8.1.20
+    validations:
+      required: true
+  - type: input
+    id: filament-version
+    attributes:
+      label: PHP Version
+      description: What version of Filament are you running? Please be as specific as possible
+      placeholder: For example, 3.2.0
+    validations:
+      required: true
+  - type: dropdown
+    id: operating-systems
+    attributes:
+      label: Operation System
+      description: On which operating systems does the problem occur? You can select more than one.
+      multiple: true
+      options:
         - macOS
         - Windows
         - Linux
-    - type: textarea
-      id: notes
-      attributes:
-          label: Notes
-          description: Use this field to provide any other notes that you feel might be relevant to the issue.
-      validations:
-          required: false
+    validations:
+      required: true
+  - type: textarea
+    id: notes
+    attributes:
+      label: Notes
+      description: Use this field to provide any other notes that you feel might be relevant to the issue.
+    validations:
+      required: false
