--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
         }
     ],
     "require": {
-        "php": "^8.3",
-        "spatie/laravel-package-tools": "^1.16",
+        "php": "^8.2",
+        "filament/filament": "^3",
         "illuminate/contracts": "^10.0||^11.0||^12.0",
-        "tallstackui/tallstackui": "^2",
-        "filament/filament": "^3"
+        "spatie/laravel-package-tools": "^1.16",
+        "tallstackui/tallstackui": "^2"
     },
     "require-dev": {
         "laravel/pint": "^1.14",
